# couchdbpp

./: INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac
include/.svn/: all-wcprops  dir-prop-base  entries
include/.svn/text-base/: config.h.in.svn-base
include/couchdb/: Attachment.hpp  Communication.hpp  Connection.hpp  Database.hpp  Document.hpp
include/couchdb/.svn/: all-wcprops  entries
include/couchdb/.svn/text-base/: Database.hpp.svn-base  Document.hpp.svn-base  Exception.hpp.svn-base  Revision.hpp.svn-base
include/tinyjson/: tinyjson.hpp
include/tinyjson/.svn/: all-wcprops  entries
m4/.svn/: all-wcprops  entries
m4/.svn/text-base/: ax_boost_base.m4.svn-base
src/: Communication.cpp  Database.cpp  Document.cpp  Exception.cpp  Makefile.am
src/.svn/: all-wcprops  dir-prop-base  entries
src/.svn/text-base/: Attachment.cpp.svn-base  Connection.cpp.svn-base  Document.cpp.svn-base  Makefile.in.svn-base  Revision.cpp.svn-base
test/: Makefile.in
test/.svn/: all-wcprops  entries
test/.svn/text-base/: Makefile.am.svn-base  tester.cpp.svn-base
